# PWES-BE

./: .gitignore  README.md  __init__.py  pyproject.toml
pwes/: __init__.py  pwes.py
pwes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pwes/classes/: __init__.py  pwes_class.py
pwes/mapping/: map_to_pymol.py
pwes/plotting/: plotting.py
