[tool.poetry]
name = "pwes"
version = "0.1.4"
description = "A brief description of your package"
authors = ["Your Name <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
numpy = "^1.23.5"
biopython = "^1.80"

[tool.poetry.scripts]
pwes = "pwes.classes.pwes_class:main"